--- a/css/example.styl
+++ b/css/example.styl
@@ -96,10 +96,11 @@ html
     left       : 50%
     margin     : -200px 0 0 -200px
     border-radius: 999px
+    background: black
     
 
     // Target greater than medium resolutions, grabs large resolution
-    @media gt-md  
+    @media lt-lg  
       background: blue
 
     // Target lower than medium resolutions, grabs all resolutions below medium (sm and xs)
