--- a/css/_breakpoint_inspector.styl
+++ b/css/_breakpoint_inspector.styl
@@ -7,6 +7,7 @@ body
     right     : 5px
     background: black
     color     : white
+    z-index   : 999
     
     @media lg
       content 'lg'
