Added visible inline to _visibility_helpers.
Fix whitespace typo.

--- a/css/_visibility_helpers.styl
+++ b/css/_visibility_helpers.styl
@@ -65,6 +65,23 @@
   @media xs 
     display: block !important
 
+// Visible inline lower than [breakpoint]
+.visible-lt-lg-inline
+  @media md 
+    display: inline-block !important
+  @media sm
+    display: inline-block !important
+  @media xs 
+    display: inline-block !important
+.visible-lt-md-inline
+  @media sm
+    display: inline-block !important
+  @media xs 
+    display: inline-block !important
+.visible-lt-sm-inline
+  @media xs 
+    display: inline-block !important
+
 // Hidden lower than [breakpoint]
 .hidden-lt-lg 
   @media md 
